# lan-watcher

./: .dockerignore  Dockerfile  Makefile  README_Docker.md  docker-compose.yml
backend/: .gitignore  PROJECT_PLAN.md  README.md  config_manager.py  main.py  migrations.py  pyproject.toml  start.py
backend/database/: database.py  migrations.py
backend/models/: models.py  oui_parser.py  scan_config.py
backend/scanner/: nmap_scanner.py  scanner.py  scanner_integration.py
backend/service/: services.py
backend/storage/: file_storage.py
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: DatePicker.tsx  DeviceCard.tsx  DeviceList.tsx  DeviceTable.tsx  EnhancedRecentActivity.tsx  Navbar.tsx  NetworkStats.tsx  RecentActivity.tsx  ScanConfigForm.tsx  ScanControl.tsx  Sidebar.tsx  TimelineChart.tsx  index.ts
frontend/src/hooks/: useDevices.ts
frontend/src/routes/: Dashboard.tsx  DevicesPage.tsx  Layout.tsx  SettingsPage.tsx  StatusPage.tsx  TimelinePage.tsx  index.tsx
frontend/src/services/: api.ts  mockData.ts
frontend/src/store/: useDeviceStore.ts
frontend/src/styles/: tailwind.css  tailwind.output.css
frontend/src/types/: index.ts
frontend/src/utils/: deviceIcons.tsx  index.ts  timeUtils.ts
