[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncio>=3.4.3",
    "fastapi>=0.115.12",
    "ipaddress>=1.0.23",
    "psutil>=7.0.0",
    "python-multipart>=0.0.20",
    "scapy>=2.6.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]
